--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jasmine-fail-fast",
-  "version": "2.0.0",
+  "name": "@qawolf/jasmine-fail-fast",
+  "version": "2.0.1",
   "description": "Allow Jasmine tests to \"fail-fast\", exiting on the first failure instead of running all tests no matter what. ",
   "repository": {
     "type": "git",
